--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 /* Reset some basic elements */
  
 body {
-    font-family: sans-serif;
+    font-family: 'Poppins',sans-serif;
     background-color: #f4f4f4;
 }
 .images{
@@ -207,6 +207,23 @@ form input[type="number"] {
     
     box-shadow: 4px 4px 12px rgba(114,226,174, 1);
 }
+.card-text {
+   text-align: start;
+   text-wrap: wrap;
+   text-justify: auto;
+   line-height: 1.3;
+   letter-spacing: 1px ;
+}
+.col-md-6 .card {
+    transition: 1s;
+    border-radius: 15px;
+}
+.col-md-6 .card:hover {
+    background-color: transparent;
+    transform: translateY(-8px);
+    border-color: blue;
+}
+
 @media screen and (max-width: 1200px) {
     .container-services .cards {
         grid-template-columns: repeat(1,1fr);
