--- a/style.css
+++ b/style.css
@@ -270,6 +270,8 @@ form input[type="number"] {
     }
     .map {
         width: auto;
+        margin-right: auto;
+        margin-left: auto;
     }
 }
 
