--- a/style.css
+++ b/style.css
@@ -306,8 +306,16 @@ form input[type="number"] {
         right: auto;
         font-size: small;
     }
-    .map {
+   
+}
+@media (min-width:400px) {
+    .container-services, .cards {
         width: auto;
+        margin-right: auto;
+        margin-left: auto;
+    }
+    .map {
+        width: 100%;
         margin-right: auto;
         margin-left: auto;
         padding-left: 5px;
@@ -320,13 +328,6 @@ form input[type="number"] {
     }
     .navbar-toggler-icon {
        width:25px ; 
-    }
-}
-@media (min-width:425px) {
-    .container-services, .cards {
-        width: auto;
-        margin-right: auto;
-        margin-left: auto;
     }
 }
 
